# bijux-masterclass

./: .gitignore  Makefile  PROOF_GUIDE.md  README.md  TOUR.md  WALKTHROUGH_GUIDE.md  mkdocs.shared.yml  mkdocs.yml  requirements-docs.txt
.bijux/: checks.consumer.json
courses/python-programming/python-meta-programming/capstone/: README.md  pyproject.toml
courses/python-programming/python-meta-programming/capstone/src/incident_plugins/: __init__.py  fields.py
courses/python-programming/python-meta-programming/capstone/tests/: test_fields.py
courses/python-programming/python-object-oriented-programming/capstone/: Makefile  README.md  pyproject.toml
courses/python-programming/python-object-oriented-programming/capstone/src/service_monitoring/: __init__.py  demo.py  model.py  policies.py  repository.py  runtime.py
courses/python-programming/python-object-oriented-programming/capstone/tests/: test_policy_evaluation.py  test_policy_lifecycle.py
courses/reproducible-research/deep-dive-snakemake/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
courses/reproducible-research/deep-dive-snakemake/.github/workflows/: pages.yml
courses/reproducible-research/deep-dive-snakemake/capstone/: FILE_API.md  Makefile  README.md  TOUR.md  pyproject.toml
courses/reproducible-research/deep-dive-snakemake/capstone/src/capstone/: fastqio.py  kmer_profile.py  manifest.py
courses/reproducible-research/deep-dive-snakemake/capstone/tests/: test_kmer.py
courses/reproducible-research/deep-dive-snakemake/capstone/workflow/rules/: publish.smk
courses/reproducible-research/deep-dive-snakemake/course-book/: index.md  module-00.md  module-01.md  module-02.md  module-03.md  module-04.md  readme-capstone.md
courses/reproducible-research/deep-dive-snakemake/snakemake-capstone/: README.md  Snakefile  environment.yaml
courses/reproducible-research/deep-dive-snakemake/snakemake-capstone/data/panel/: panel.fasta
courses/reproducible-research/deep-dive-snakemake/snakemake-capstone/profiles/ci/: config.yaml
courses/reproducible-research/deep-dive-snakemake/snakemake-capstone/profiles/local/: config.yaml
courses/reproducible-research/deep-dive-snakemake/snakemake-capstone/workflow/rules/: preprocess.smk  summarize_report.smk
courses/reproducible-research/deep-dive-snakemake/snakemake-capstone/workflow/scripts/: provenance.py
programs/python-programming/python-meta-programming/capstone/: .gitignore  ACTION_GUIDE.md  ARCHITECTURE.md  BUNDLE_GUIDE.md  BUNDLE_MANIFEST_GUIDE.md  COMMAND_GUIDE.md  CONSTRUCTOR_GUIDE.md  DEFINITION_TIME_GUIDE.md  EXTENSION_GUIDE.md  FIELD_GUIDE.md  FIRST_SESSION_GUIDE.md  GUIDE_INDEX.md  INSPECTION_GUIDE.md  MECHANISM_SELECTION_GUIDE.md  Makefile  PACKAGE_GUIDE.md  PLUGIN_CATALOG.md  PROOF_GUIDE.md  README.md  REGISTRY_GUIDE.md  SCENARIO_SELECTION_GUIDE.md  SOURCE_TO_PROOF_MAP.md  TARGET_GUIDE.md  TEST_GUIDE.md  TEST_READING_MAP.md  TOUR.md  TRACE_GUIDE.md  WALKTHROUGH_GUIDE.md  pyproject.toml
programs/python-programming/python-meta-programming/capstone/docs/: ACTION_GUIDE.md  ARCHITECTURE.md  BUNDLE_GUIDE.md  COMMAND_GUIDE.md  DEFINITION_TIME_GUIDE.md  DESIGN_BOUNDARIES.md  EXTENSION_GUIDE.md  FIRST_SESSION_GUIDE.md  GUIDE_INDEX.md  INDEX.md  INSPECTION_GUIDE.md  MANIFEST_GUIDE.md  PACKAGE_GUIDE.md  PLUGIN_CATALOG.md  PLUGIN_RUNTIME_GUIDE.md  PROOF_GUIDE.md  PUBLIC_API_GUIDE.md  PUBLIC_SURFACE_MAP.md  REVIEW_ROUTE_MAP.md  SCENARIO_GUIDE.md  SCENARIO_SELECTION_GUIDE.md  SOURCE_GUIDE.md  SOURCE_TO_PROOF_MAP.md  TARGET_GUIDE.md  TEST_GUIDE.md  TEST_READING_MAP.md  TOUR.md  TRACE_GUIDE.md  WALKTHROUGH_GUIDE.md  architecture.md  command-guide.md  design-boundaries.md  extension-guide.md  index.md  package-guide.md  proof-guide.md  test-guide.md  tour.md  walkthrough-guide.md
programs/python-programming/python-meta-programming/capstone/scripts/: write_bundle_manifest.py
programs/python-programming/python-meta-programming/capstone/src/incident_plugins/: actions.py  cli.py  framework.py  plugins.py  scenarios.py
programs/python-programming/python-meta-programming/capstone/tests/: test_bundle_manifest.py  test_cli.py  test_public_api.py  test_registry.py  test_runtime.py
programs/reproducible-research/deep-dive-dvc/capstone/: ARCHITECTURE.md  BUNDLE_MANIFEST_GUIDE.md  CHANGE_PLACEMENT_GUIDE.md  CONTROL_SURFACE_GUIDE.md  DATA_PROFILE_GUIDE.md  EXPERIMENT_GUIDE.md  MODEL_GUIDE.md  Makefile  PUBLISH_CONTRACT.md  README.md  RECOVERY_GUIDE.md  RELEASE_REVIEW_GUIDE.md  REVIEW_ROUTE_GUIDE.md  SOURCE_GUIDE.md  STAGE_CONTRACT_GUIDE.md  TOUR.md  dvc.yaml  project-docs-manifest.txt  pyproject.toml
programs/reproducible-research/deep-dive-dvc/capstone/docs/: ARCHITECTURE.md  CHANGE_PLACEMENT_GUIDE.md  CONTROL_SURFACE_GUIDE.md  DATA_PROFILE_GUIDE.md  DOMAIN_GUIDE.md  EXPERIMENT_GUIDE.md  INDEX.md  MODEL_GUIDE.md  PREDICTION_REVIEW_GUIDE.md  PUBLISH_CONTRACT.md  RECOVERY_GUIDE.md  RELEASE_REVIEW_GUIDE.md  SOURCE_BASELINE_GUIDE.md  SOURCE_GUIDE.md  STAGE_CONTRACT_GUIDE.md  STATE_LAYER_GUIDE.md  TOUR.md  architecture.md  domain-guide.md  experiment-guide.md  index.md  publish-contract.md  recovery-guide.md  release-review-guide.md  review-route-guide.md  stage-contract-guide.md  tour.md
programs/reproducible-research/deep-dive-dvc/capstone/project-docs/: index.md
programs/reproducible-research/deep-dive-dvc/capstone/scripts/: write_bundle_manifest.py
programs/reproducible-research/deep-dive-dvc/capstone/src/incident_escalation_capstone/: common.py  fit.py  inspect.py  prepare.py  publish.py  verify.py
programs/reproducible-research/deep-dive-dvc/capstone/tests/: test_bundle_manifest.py  test_inspect.py  test_prepare.py  test_verify.py
(+2027 files in other folders)
