[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deep-dive-snakemake"
version = "0.1.0"
description = "Course materials and reference workflows for Snakemake: dynamic DAGs, contracts, profiles, publishing, and verification."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Bijux" }]
keywords = ["snakemake", "workflow", "bioinformatics", "reproducibility", "hpc", "course"]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://bijux.github.io/deep-dive-snakemake/"
Repository = "https://github.com/bijux/deep-dive-snakemake"
Issues = "https://github.com/bijux/deep-dive-snakemake/issues"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-macros-plugin>=1.3",
  "mkdocs-minify-plugin>=0.8",
  "pymdown-extensions>=10.8",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
]
dev = [
  "ruff>=0.6",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
# This repo is documentation-first; ship docs + metadata, not a Python import package.
include = [
  "course-book/**",
  "mkdocs.yml",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = [
  "course-book/**",
  "snakemake-capstone/**",
  ".github/**",
  "mkdocs.yml",
  "Makefile",
  ".gitignore",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]