[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakemake-capstone"
version = "1.0.0"
description = "Reference-grade Snakemake capstone workflow and supporting CLI tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Bijan Mousavi", email = "bijan@bijux.io"}]
dependencies = [
    "snakemake >= 9.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "ruff >= 0.5",
    "mypy >= 1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.setuptools.packages.find]
where = ["src"]
