[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-meta-programming-capstone"
version = "0.1.0"
description = "Executable plugin-runtime capstone for the Python metaprogramming course."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
incident-plugins = "incident_plugins.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]
