[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-escalation-capstone"
version = "0.1.0"
description = "Reference DVC capstone for the Deep Dive DVC course."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Bijan Mousavi", email = "bijan@bijux.io"},
]
dependencies = []

[project.scripts]
incident-escalation-inspect = "incident_escalation_capstone.inspect:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
